# leptrun

./: .gitignore  Cargo.toml  Cargo.toml.template  Dev.toml  Makefile.toml  Makefile.toml.template  README.md  Release.toml  Trunk.toml  cargo-generate.toml  index.html  index.html.template  input-f4266a1bffc66ab3.css  input.css  leptrun-8ec54ed591e118d.js  leptrun-8ec54ed591e118d_bg.wasm  leptrun-94a73c73b03f1d3f25a303c6534923dc6f3a8d044e62d54adaa7a13f07c7b3d50269c08dc8d43a9a60e2b4971a0b3cce.js  leptrun-ab222ad4c21abe9d_bg.wasm  leptrun-b6fd3f2d1576cc6d.js  leptrun-b6fd3f2d1576cc6d_bg.wasm  leptrun-be9ff540a89c9908_bg.wasm  leptrun-eaa0dc332a8370bb.js  leptrun-eaa0dc332a8370bb_bg.wasm  output-6b410fd2b6ebf9e8.css  post-generate.rhai  taileptrun-5ed1d1119c850e756695bfa8ec3ee6f9f818bf1670bf33983f5c9871296e1b0837fe0b3ce5f70f93c4a6a260258ab75a.js  taileptrun-5ed1d1119c850e756695bfa8ec3ee6f9f818bf1670bf33983f5c9871296e1b0837fe0b3ce5f70f93c4a6a260258ab75a_bg.wasm  taileptrun-7d6aa5cd9f22cc2c3f830e24e62125f36ff7af1bd9a047f71e5ad113badcd7ab116304b2358a7986b3d65bcc1eccc7d8.js  taileptrun-b6fd1bfa7af2cee6761269072db41e3ff36e478326242ab4734d36af08fe764c4107fc8ccb4a99a528c9b55f7c0d8103.js  tailwind-e41cf68e9aff3fd7.css  tailwind.config.js
public/: about_favicon.txt
release/: index.html  leptrun-94a73c73b03f1d3f25a303c6534923dc6f3a8d044e62d54adaa7a13f07c7b3d50269c08dc8d43a9a60e2b4971a0b3cce_bg.wasm  leptrun-ab222ad4c21abe9d.js  leptrun-b0d948791b1dd815.js  leptrun-b0d948791b1dd815_bg.wasm  leptrun-be9ff540a89c9908.js  leptrun-d6b981149bdbfe9c.js  leptrun-d6b981149bdbfe9c_bg.wasm  (+9 more)
(+1 files in other folders)
