[package]
name = "leptrun"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
leptos = { version = "0.5.4", features = ["csr"] }
leptos_meta = { version = "0.5.4", features = ["csr"] }
leptos_router = { version = "0.5.4", features = ["csr"] }
log = "0.4.20"
gloo-net = { version = "0.5.0", features = ["http"] }

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.89" }
console_log = { version = "1.0.0"}
console_error_panic_hook = { version = "0.1.7"}
