[package]
name = "leptrun"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
log = "0.4.21"
gloo-net = { version = "0.5.0", features = ["http"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.92" }
console_log = { version = "1.0.0" }
console_error_panic_hook = { version = "0.1.7" }
