[package]
name = "leptrun"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.5"
log = "0.4.27"
gloo-net = { version = "0.6.0", features = ["http"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.100" }
console_log = { version = "1.0.0" }
console_error_panic_hook = { version = "0.1.7" }
